--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ function myFunction() {
   if (isNaN(age)) {
     voteable = "Invalid input. You can only enter numbers.";
   } else {
-    voteable = (age == 251125) ? "Correct!" : "Wrong input";
+    voteable = (age == 251125) ? "Correct!" : "Wrong code";
   }
 document.getElementById("demo").innerHTML=voteable;}
 </script>
