--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html> <head> <meta name="viewport" content="width=device-width"/></head>
 <body style="background-color:black">
-
 <h3 style="color:white">Enter the code</h3>
 
 <input id="age"/>
