--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ function myFunction() {
   } else {
     voteable = (age == 251125) ? "Correct!" : "Wrong code";
   }
+/* HOOYYYY BA'T KA NANDITO?! MADUGA KAAAAA!!! */
 document.getElementById("demo").innerHTML=voteable;}
 </script>
 </body>
